--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.20.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "on-finished": "^2.4.1"
   }
 }
